Add RabbitMQ
