# user/api/controllers/user.go
@@ -3,6 +3,7 @@ package controllers
 import (
 	"net/http"
 
+	"user/api/mq"
 	"user/models"
 	"user/services"
 
@@ -16,22 +17,20 @@ type UserController interface {
 	GetCurrent(ctx *gin.Context)
 	Register(ctx *gin.Context)
 	Login(ctx *gin.Context)
-	Delete(ctx *gin.Context)
-
-	AssignRole(ctx *gin.Context)
-	RemoveRole(ctx *gin.Context)
 }
 
-func NewUserController(service services.UserService) UserController {
+func NewUserController(service services.UserService, producer mq.Producer) UserController {
 	log.Info().Msg("Creating new user controller")
 
 	return &userController{
-		service: service,
+		service:  service,
+		producer: producer,
 	}
 }
 
 type userController struct {
-	service services.UserService
+	service  services.UserService
+	producer mq.Producer
 }
 
 // @Summary Get all users
@@ -121,6 +120,8 @@ func (c *userController) Register(ctx *gin.Context) {
 		return
 	}
 
+	c.producer.SendMsg(models.CreateUserMsgType, token.User, []string{models.ProductQueue, models.OrderQueue})
+
 	ctx.JSON(http.StatusCreated, token)
 }
 
@@ -147,71 +148,4 @@ func (c *userController) Login(ctx *gin.Context) {
 	}
 
 	ctx.JSON(http.StatusOK, token)
-}
-
-// @Summary Delete user
-// @Description Delete user
-// @Tags users
-// @Accept json
-// @Produce json
-// @Security ApiKeyAuth
-// @Param id path string true "User ID"
-// @Success 200
-// @Router /users/{id} [delete]
-func (c *userController) Delete(ctx *gin.Context) {
-	id := ctx.Param("id")
-
-	err := c.service.Delete(id)
-	if err != nil {
-		ctx.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
-		return
-	}
-
-	ctx.Status(http.StatusOK)
-}
-
-// @Summary Assign role to user
-// @Description Assign role to user
-// @Tags users
-// @Accept json
-// @Produce json
-// @Security ApiKeyAuth
-// @Param id path string true "User ID"
-// @Param role path string true "Role"
-// @Success 200
-// @Router /users/{id}/roles/{role} [patch]
-func (c *userController) AssignRole(ctx *gin.Context) {
-	id := ctx.Param("id")
-	role := ctx.Param("role")
-
-	err := c.service.AssignRole(id, role)
-	if err != nil {
-		ctx.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
-		return
-	}
-
-	ctx.Status(http.StatusOK)
-}
-
-// @Summary Remove role from user
-// @Description Remove role from user
-// @Tags users
-// @Accept json
-// @Produce json
-// @Security ApiKeyAuth
-// @Param id path string true "User ID"
-// @Param role path string true "Role"
-// @Success 200
-// @Router /users/{id}/roles/{role} [delete]
-func (c *userController) RemoveRole(ctx *gin.Context) {
-	id := ctx.Param("id")
-	role := ctx.Param("role")
-
-	err := c.service.RemoveRole(id, role)
-	if err != nil {
-		ctx.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
-		return
-	}
-
-	ctx.Status(http.StatusOK)
 }
